Martirosyan regulon analysis SCENIC

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,13 @@ data/*.h5
 data/*.loom
 data/*.h5ad
 preprocessing/*.html
-.ipynb_checkpoints        
+.ipynb_checkpoints
+data/Martirosyan_2024/Martirosyan.rds
+*.feather
+*.tbl
+data/Martirosyan_2024/Martirosyan_motifs.tsv
+data/Martirosyan_2024/Martirosyan_regulons_aucell.tsv
+data/Martirosyan_2024/Martirosyan_regulons_aucell_binarized.tsv
+data/Martirosyan_2024/Martirosyan_adj.csv
+data/Martirosyan_2024/GSE243639_Filtered_count_table.csv.gz
+
