--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ data/Martirosyan_2024/GSE243639_Filtered_count_table.csv.gz
 data/Martirosyan_2024/Martirosyan_adj_v2.csv
 data/Martirosyan_2024/Martirosyan_modules.tsv
 data/Kellis_2024/*
+figures/Figure_XX*
